# LanDrop

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: handler.cpp  headers.hpp  receiver.cpp  sender.cpp
